--- a/app/views/patient/confirm.html.erb
+++ b/app/views/patient/confirm.html.erb
@@ -24,6 +24,10 @@
 
             }
 
+						function dashboardPatient(){
+								window.location = "/patient/show?identifier=<%= params[identifier]%>"
+						}
+
             function showMessage(aMessage, withCancel, timed) {
                 if (typeof (tstMessageBar) == "undefined") {
                     __$("content").innerHTML += "<div id='messageBar' class='messageBar'></div>";
@@ -101,9 +105,10 @@
 
 
             button{
-                font-size: 16pt;
+                font-size: 15pt !important;
                 font-weight: bold;
-                
+                margin-right: 15px;
+                min-width: 150px !important;
             }
             #details th{
                 font-size: 1.28em;
@@ -215,8 +220,9 @@
 
                 <div id="footer" class="dark">
                     <div id="buttons" class="buttons" style="top:0px">
-                        <button id="continue" class="green right" onclick="correctPatient()"><span>Continue</span></button>
-                        <button id="cancel" class="blue left" onclick="WrongPatient()"><span>Scan Again</span></button>
+                      <button id="continue" class="green right" onclick="correctPatient()"><span>Order Tests</span></button>
+                      <button id="view" class="blue right" onclick="dashboardPatient()"><span>View Tests</span></button>
+                        <button id="cancel" class="red left" onclick="WrongPatient()"><span>Scan Again</span></button>
                     </div>
                 </div>
             </div> 
