Pushing date of birth

--- a/app/views/patient/confirm.html.erb
+++ b/app/views/patient/confirm.html.erb
@@ -25,7 +25,7 @@
             }
 
 						function dashboardPatient(){
-								window.location = "/patient/show?identifier=<%= params[identifier]%>"
+								window.location = "/patient/show?identifier=<%= params[:identifier]%>"
 						}
 
             function showMessage(aMessage, withCancel, timed) {
